<resources>

    <!-- Login -->
    <string name="app_name">B.I.T</string>
    <string name="btn_login">LOGIN</string>
    <string name="msg_login">Seja Bem vindo ao B.I.T</string>
    <string name="hint_username">Digite seu login</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="msg_newUser">Não tem um login? Clique aqui</string>

    <!-- Register Common -->
    <string name="card_createAccount">NOVA CONTA</string>
    <string name="btn_nextStep">CONTINUAR</string>

    <!-- Register - First Step -->
    <string name="hint_newname">Digite seu nome</string>
    <string name="hint_newemail">Digite seu email</string>
    <string name="hint_newlogin">Digite seu login</string>

    <!-- Register - Second Step -->
    <string name="hint_newpassword">Digite sua senha</string>
    <string name="hint_newpasswordConfirmation">Confirme a sua senha</string>
    <string name="btn_confirmAccount">CONFIRMAR</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Menu -->
    <string name="edit_account">Editar conta</string>
    <string name="configurations">Configurações</string>
    <string name="logout">Log Out</string>

    <!-- Home -->
    <string name="home_deposit">Depósitos</string>
    <string name="home_withdraw">Retiradas</string>
    <string name="home_home">Home</string>
    <string name="deposits_newAddress">Novo endereço</string>

    <string name="title_activity_deposits">deposits</string>
    <string name="title_activity_edit_user">EditUserActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balanceMessage">Seu Saldo atual é de:</string>
    <string name="title_activity_withdraw">WithdrawActivity</string>
    <string name="withdraw_request_text">Digite a quantidade desejeda:</string>
    <string name="withdraw_request_header">Retirada</string>
    <string name="withdraw_amount_hint">Quantidade em bitcoin desejada</string>
    <string name="btc_symbol">BTC</string>
    <string name="withdraw_button_text">EFETUAR RETIRADA</string>
    <string name="withdraw_address_hint">Endereço de destino</string>
    <string name="ConfigurationOption">Enviar um email quando efetuar uma retirada</string>


</resources>
