<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/settingsIcon"
        android:icon="@drawable/settingsicon"
        app:showAsAction="always"
        android:title="Configurations">

        <menu>

            <item android:id="@+id/action_editAccount"
                app:showAsAction="ifRoom"
                android:title="@string/edit_account" />

            <item android:id="@+id/action_configurations"
                app:showAsAction="ifRoom"
                android:title="@string/configurations" />

            <item android:id="@+id/action_logout"
                app:showAsAction="ifRoom"
                android:title="@string/logout" />

        </menu>

    </item>

</menu>