<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/homeToolbar"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:background="@color/design_default_color_secondary"
            android:layout_height="?attr/actionBarSize" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addresses_recycleView"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>



        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <Button
                    android:id="@+id/depositsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/home_deposit"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="@color/design_default_color_secondary"
                    android:drawableTop="@drawable/reorder_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/homeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/home_home"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="@color/design_default_color_secondary"
                    android:drawableTop="@drawable/home"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/home_withdraw"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="@color/design_default_color_secondary"
                    android:drawableTop="@drawable/send"/>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</layout>